--- a/src/main/webapp/css/dashboard.css
+++ b/src/main/webapp/css/dashboard.css
@@ -295,7 +295,7 @@ main .search-box {
 	transform: translateY(-7px);
 	outline: none;
 	transition: all 300ms ease;
-	border: 1px solid var(--color-light);
+	border: 1px solid var(--color-white);
 	width: 26rem;
 }
 
@@ -442,7 +442,7 @@ view {
 	border: none;
 	border-radius: 10px;
 	z-index: 4;
-	background-color: white;
+	background-color: var(--color-white);
 	width: 64vw;
 	max-width: 80%;
 }
